--- a/config/cfg/presets/very-low.cfg
+++ b/config/cfg/presets/very-low.cfg
@@ -26,15 +26,15 @@ jigglebones=off
 sheens_speed=off
 textures=very_low
 ropes=off
-hud_player_model=off
+hud_player_model=on
 hud_panels=off
 messages=disable
-killfeed=off
-killstreaks=off
+killfeed=on
+killstreaks=on
 debug=off
 outlines=off
 sound=low
-voice_chat=off
+voice_chat=on
 
 tf_quest_map_tuner_wobble_magnitude 0 // Disable the red tuner on the contracker
 tf_item_inspect_model_auto_spin 0 // Do not auto spin items in the inspect view
